--- a/fix/index.html
+++ b/fix/index.html
@@ -14,6 +14,7 @@
         <h1>Future home of somehing quite cool</h1>
         <h2>if you are a visitor check back soon.</h2>
         <img src="https://img.icons8.com/external-stick-figures-gan-khoon-lay/51/null/external-cutting-agriculture-plantation-farming-poultry-fishery-jobs-occupations-careers-stick-figures-gan-khoon-lay.png" />
+        <span>For more information call (240)883-8479</span>
 
     </div>
 </body>
